add custom Identity app db for custom user handling

--- a/AffirmationsApp/appsettings.json
+++ b/AffirmationsApp/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AffirmationsApp-a13b589e-2ec0-401a-a31b-284e5fb2ec1c;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AffirmationsApp-a13b589e-2ec0-401a-a31b-284e5fb2ec1c;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AffirmationsAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AffirmationsApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
